Network page done

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 	<script type="text/javascript" src="./assets/js/controllers/airings_detail.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/globalSearch.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/user.js"></script>
+	<script type="text/javascript" src="./assets/js/controllers/network.js"></script>
 	<script type="text/javascript" src="./assets/js/masked-input.js"></script>
 
 	<!--Start - Angular UI grid -->
