Admin console ui grid appear -24

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 	<script type="text/javascript" src="./assets/js/controllers/configure_emails.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/globalSearch.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/user.js"></script>
+	<script type="text/javascript" src="./assets/js/controllers/admin.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/network.js"></script>
 	<script type="text/javascript" src="./assets/js/masked-input.js"></script>
 
