--- a/index.html
+++ b/index.html
@@ -97,56 +97,58 @@
 				</li>
 				<li class="global-search border-r-desktop">
 					<form class="shrink align-right" name="frmSearch" no-validate="" ng-submit="search_result()">
-						<span class="search-filter"
-							ng-class="!frmSearch.globalSearchInputText.$valid ? 'error-text-box':''">
-							<span class="search-icon">
-								<i data-feather="search"></i>
+						<div>
+							<span class="search-filter"
+								ng-class="!frmSearch.globalSearchInputText.$valid ? 'error-text-box':''">
+								<span class="search-icon">
+									<i data-feather="search"></i>
+								</span>
+								<input type="text" placeholder="Search Advertiser, Brand or Creative" autocomplete="off"
+									ng-model-options="{debounce: 250}" ng-model="globalSearchInputText"
+									id="globalSearchInputText" name="globalSearchInputText" ng-minlength="3">
 							</span>
-							<input type="text" placeholder="Search Advertiser, Brand or Creative" autocomplete="off"
-								ng-model-options="{debounce: 250}" ng-model="globalSearchInputText"
-								id="globalSearchInputText" name="globalSearchInputText" ng-minlength="3">
-						</span>
-						<span class="inline-label search-text-validation-error"
-							ng-show="frmSearch.globalSearchInputText.$error.minlength">
-							<b>Note:</b> <span>{{searchTextValidation}}</span>
-						</span>
-						<div class="search-container scrollbar" style="display: none;">
-							<div id="no_record_msg" style="display:none;">Can't find what you're looking for?
-								<a href="#" zf-open="userFeedbackModal" onclick="showModalBolcks();">Click here</a>
-							</div>
-							<div id="adv_gs_view">
-								<div class="search-heading-main">
-									Advertisers (<span id="global_search_adv_count"></span>)
-									<span id="adv_view_all"></span>
+							<span class="inline-label search-text-validation-error"
+								ng-show="frmSearch.globalSearchInputText.$error.minlength">
+								<b>Note:</b> <span>{{searchTextValidation}}</span>
+							</span>
+							<div class="search-container scrollbar" style="display: none;">
+								<div id="no_record_msg" style="display:none;">Can't find what you're looking for?
+									<a href="#" zf-open="userFeedbackModal" onclick="showModalBolcks();">Click here</a>
 								</div>
-								<ul class="no-bullet" id="adv_list_ul">
-								</ul>
-							</div>
-							<div id="brands_gs_view">
-								<div class="search-heading-main">
-									Brands (<span id="global_search_brand_count"></span>)
-									<span id="brand_view_all"></span>
+								<div id="adv_gs_view">
+									<div class="search-heading-main">
+										Advertisers (<span id="global_search_adv_count"></span>)
+										<span id="adv_view_all"></span>
+									</div>
+									<ul class="no-bullet" id="adv_list_ul">
+									</ul>
 								</div>
-								<ul class="no-bullet" id="brand_list_ul">
-								</ul>
-							</div>
-							<div id="creatives_gs_view">
-								<div class="search-heading-main">
-									Creatives (<span id="global_search_creative_count"></span>)
-									<span id="creative_view_all"></span>
+								<div id="brands_gs_view">
+									<div class="search-heading-main">
+										Brands (<span id="global_search_brand_count"></span>)
+										<span id="brand_view_all"></span>
+									</div>
+									<ul class="no-bullet" id="brand_list_ul">
+									</ul>
 								</div>
-								<ul class="no-bullet" id="creative_list_ul">
-								</ul>
-							</div>
-							<div class="show-feedback-option top-border" id="feddback_div" style="display:none;">
-								Can't find what you're looking for?
-								<a zf-open="userFeedbackModal" onclick="showModalBolcks();"
-									class="link-color m-left8">Click here</a>
+								<div id="creatives_gs_view">
+									<div class="search-heading-main">
+										Creatives (<span id="global_search_creative_count"></span>)
+										<span id="creative_view_all"></span>
+									</div>
+									<ul class="no-bullet" id="creative_list_ul">
+									</ul>
+								</div>
+								<div class="show-feedback-option top-border" id="feddback_div" style="display:none;">
+									Can't find what you're looking for?
+									<a zf-open="userFeedbackModal" onclick="showModalBolcks();"
+										class="link-color m-left8">Click here</a>
+								</div>
 							</div>
 						</div>
 					</form>
 				</li>
-				<li ng-repeat="item in right_menu" class="d-none d-xl-flex">
+				<li ng-repeat="item in right_menu" class="d-none d-xl-flex {{item.aclass}}">
 					<a title="{{item.title}}" target="{{item.target}}" id="{{item.aid}}"
 						ng-click="menuItemClick(item);">
 						<img ng-src="{{item.src}}" alt="{{item.alt}}">{{item.title}}
