List and filter NO records found done.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	<script type="text/javascript" src="./assets/js/shared/confirmBox/modalConfirmService.js"></script>
 	<script type="text/javascript" src="./assets/js/service.js"></script>
 	<script type="text/javascript" src="./assets/js/filters/safehtml.js"></script>
+	<script type="text/javascript" src="./assets/js/filters/ucfirst.js"></script>
 	<script type="text/javascript" src="./assets/js/service.js"></script>
 
 	<!--Start - Angular Js controllers-->
