Airing detail page different routing

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head lang="en">
+	<base href="./">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="format-detection" content="telephone=no" />
@@ -57,6 +58,7 @@
 	<script type="text/javascript" src="./assets/js/service.js"></script>
 	<script type="text/javascript" src="./assets/js/filters/safehtml.js"></script>
 	<script type="text/javascript" src="./assets/js/filters/ucfirst.js"></script>
+	<script type="text/javascript" src="./assets/js/directives/history-backward.js"></script>
 	<script type="text/javascript" src="./assets/js/service.js"></script>
 
 	<!--Start - Angular Js controllers-->
