main.js cntrollers moved

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 	<script type="text/javascript" src="./assets/js/masked-input.js"></script>
 
 	<!-- Start angular Js Modal controller-->
+	<script type="text/javascript" src="./assets/js/controllers/filter_modal.js"></script>
+	<script type="text/javascript" src="./assets/js/controllers/list_modal.js"></script>
+	<script type="text/javascript" src="./assets/js/controllers/report_modal.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/new_modal.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/refine_modal.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/network_modal.js"></script>
