--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="format-detection" content="telephone=no" />
+	<link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
 	<title>DRMetrix - THE DNA OF DIRECT RESPONSE</title>
 	<link href='./assets/css/circle.css' rel='stylesheet' type='text/css' />
 	<link href="./assets/css/v-accordion.css" rel="stylesheet" />
