UI for angular grid

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	<script type="text/javascript" src="./assets/js/controllers/hod_modal.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/daypart_modal.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/network_dropdown_modal.js"></script>
-	<script type="text/javascript" src="./assets/js/controllers/program_section_modal.js"></script>
+	<!-- <script type="text/javascript" src="./assets/js/controllers/program_section_modal.js"></script> -->
 
 	<!--Start - Angular UI grid -->
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.7.0/angular-touch.js"></script>
