--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
 	<script type="text/javascript" src="./assets/js/controllers/daypart_modal.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/network_dropdown_modal.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/save_filter_ranking.js"></script>
+	<script type="text/javascript" src="./assets/js/controllers/saveListModalController.js"></script>
 	<!-- <script type="text/javascript" src="./assets/js/controllers/program_section_modal.js"></script> -->
+
+	<!--services-->
+	<script type="text/javascript" src="./assets/js/services/listService.js"></script>
 
 	<!--Start - Angular UI grid -->
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-touch.js"></script>
