Primary filter UI

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head lang="en">
 	<base href="./">
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<meta name="format-detection" content="telephone=no" />
 	<link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
 	<title>DRMetrix - THE DNA OF DIRECT RESPONSE</title>
